objects/Competitor_CQP__c.object
<CustomObject>
    <description>R3 List Competitors records created under a CQP Quote</description>
    <fields>
        <fullName>APTS_ABB_Ranking__c</fullName>
        <label>ABB Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Bad_Track_Record__c</fullName>
        <label>Bad Track Record</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Relationship__c</fullName>
        <label>Customer Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Sales_Price__c</fullName>
        <formula>IF( AND(  Quote_Proposal__r.APTS_Quotation_Amount__c &gt; 0,NOT(ISBLANK(  Quote_Proposal__r.Apttus_Proposal__Opportunity__c  ) ) ) , 

( Quote_Proposal__r.APTS_Quotation_Amount__c + ((VALUE(TEXT(APTS_Percentage__c)) / 100) * Quote_Proposal__r.APTS_Quotation_Amount__c)), 

(Quote_Proposal__r.Apttus_Proposal__Opportunity__r.Opportunity_Value__c + ((VALUE(TEXT(APTS_Percentage__c)) / 100) * Quote_Proposal__r.Apttus_Proposal__Opportunity__r.Opportunity_Value__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated Sales Price calculated with the input in the Percentage field above.</inlineHelpText>
        <label>Estimated Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Installed_Base__c</fullName>
        <label>Installed Base</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Opportunity_Competitor_ID__c</fullName>
        <label>Opportunity Competitor ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Packaging_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Packaging/solution (one-stop-shop)</inlineHelpText>
        <label>Packaging / Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Percentage__c</fullName>
        <inlineHelpText>Select the competitor&apos;s estimated range difference against the Quotation Value. E.g. select &quot;-20% - -15%&quot; if competitor price was lower to ABB price in range of -20% - -15% ).</inlineHelpText>
        <label>Price Difference (%)</label>
        <picklist>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Leadership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Price leadership (cost reduction)</inlineHelpText>
        <label>Price Leadership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Strategy__c</fullName>
        <label>Pricing Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Quote_Proposal__r.Id  , IF( NOT( ISBLANK( Quote_Proposal__r.APTS_External_Revision__c ) ) , 
Quote_Proposal__r.APTS_Quotation_Number_Internal__c + &quot;.&quot; + Quote_Proposal__r.APTS_External_Revision__c, 

Quote_Proposal__r.APTS_Quotation_Number_Internal__c 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_of_Information__c</fullName>
        <inlineHelpText>Where did you get the information from?</inlineHelpText>
        <label>Source of Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Supplementary_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Supplementary services (benefit)</inlineHelpText>
        <label>Supplementary Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Technical_Deviation__c</fullName>
        <label>Technical Deviation</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Technology_Leadership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Technology leadership (image)</inlineHelpText>
        <label>Technology Leadership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Winning_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of Release 6, CQP to Opportunity sync. The API name is taken from CCP sandbox so that there will be no merge issues.</description>
        <label>Winning Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5-2348. Created as a hidden field to match the Opportunity Competitors against Quote Competitors for filtering purpose.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Competitor_CQP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Code__c</fullName>
        <description>R3</description>
        <label>Competitor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>R3</description>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <description>R3 Related quote to the competitor</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>Competitor_CQP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CQPCom-{00000000}</displayFormat>
        <label>Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>APTS_CannotChangeCompetitorAccount</fullName>
        <active>false</active>
        <description>Competitor account cannot be changed after creation of it.
Added as a part of CCP.</description>
        <errorConditionFormula>AND( OR(Quote_Proposal__r.APTS_Record_Type__c = &apos;Transactional Quotation&apos;, Quote_Proposal__r.APTS_Record_Type__c = &apos;Frame Agreement&apos;) ,ISCHANGED(Account__c))</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>You are not allowed to change the Competitor Account. Please add a new Competitor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_Enable_Winning_Company_upon_Closure</fullName>
        <active>true</active>
        <errorConditionFormula>AND( APTS_Winning_Company__c  = TRUE, 
NOT($User.AccountMerge_Override__c),
NOT($User.Bypass_Opportunity_Validations__c),
NOT($Setup.Validation_Override__c.Exclude__c),

OR ( 
ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c  ,&quot;RFQ Received&quot;), 
ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c, &quot;RFQ Assigned&quot;), 
ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c, &quot;Draft&quot;), 
ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c, &quot;Approval Required&quot;), 
ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c, &quot;Pending Approval&quot;), 
ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c, &quot;Approved&quot;), 
ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c, &quot;Rejected&quot;), 
ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c, &quot;Generated&quot;), 
ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c, &quot;Under Support&quot;)

) 
)</errorConditionFormula>
        <errorDisplayField>APTS_Winning_Company__c</errorDisplayField>
        <errorMessage>The Winning Company can be selected only upon submission to customer or upon quotation closure.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_Only_1_Winning_Company_Allowed</fullName>
        <active>true</active>
        <description>Validation rule to allow only 1 Winning Company to be selected per Quotation and can not be selected if the Quotation is Won.</description>
        <errorConditionFormula>AND(
NOT($User.AccountMerge_Override__c),
NOT($User.Bypass_Opportunity_Validations__c),
NOT($Setup.Validation_Override__c.Exclude__c),
APTS_Winning_Company__c = TRUE,
 
OR( Quote_Proposal__r.APTS_Record_Type__c = &quot;Transactional Quotation&quot;, 
Quote_Proposal__r.APTS_Record_Type__c= &quot;Frame Agreement&quot; 

),
OR( ISPICKVAL(Quote_Proposal__r.Apttus_Proposal__Approval_Stage__c, &quot;Won&quot;),
Quote_Proposal__r.APTS_Count_Winner_Competitors__c &gt;= 1
)
)</errorConditionFormula>
        <errorDisplayField>APTS_Winning_Company__c</errorDisplayField>
        <errorMessage>Only 1 Winning Company can be selected per Quotation and the Winning company cannot be selected when the Quotation is Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_No_Bulk_Accounts</fullName>
        <active>true</active>
        <description>Account cannot be a Bulk Account.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.Validation_Override__c.Exclude__c), 
    CONTAINS(LOWER(Account__r.Name), &apos;bulk business&apos;)    
)</errorConditionFormula>
        <errorMessage>Account cannot be a Bulk Account.</errorMessage>
    </validationRules>
</CustomObject>